--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <!--Head-->
     <div class="header">
         <img src="Google Store for Google Made Devices & Accessories-2 (1).svg" alt="">
             
